--- a/app/src/main/res/layout/activity_mostrar_detalles_pelicula.xml
+++ b/app/src/main/res/layout/activity_mostrar_detalles_pelicula.xml
@@ -72,7 +72,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:backgroundTint="#FFAB00"
-        android:onClick="aceptar_edicion_pelicula"
+        android:onClick="editar_pelicula"
         android:text="Aplicar cambios"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginBottom="32dp"
         android:backgroundTint="@color/design_default_color_error"
-        android:onClick="borrar_datos_pelicula_yt"
+        android:onClick="borrar_pelicula"
         android:text="Borrar pelicula"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bt_detalles_edit_pelicula"
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#FFAB00"
-        android:onClick="mostrar_cambiar_imagen"
+        android:onClick="mostrar_selector_imagenes"
         android:text="Cambiar imagen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
