--- a/app/src/main/res/layout/activity_nuevo_registro.xml
+++ b/app/src/main/res/layout/activity_nuevo_registro.xml
@@ -58,7 +58,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="185dp"
         android:backgroundTint="#DD2C00"
-        android:onClick="registro"
+        android:onClick="registrarse"
         android:text="Registrarse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
